<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.openmrs.maven.parents</groupId>
        <artifactId>maven-parent-openmrs-module</artifactId>
        <version>1.1.1</version>
    </parent>

	<groupId>org.openmrs.module</groupId>
	<artifactId>ehospitalws</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>eHospital Web Services</name>
	<description>Web Services for the eHospital project</description>

	<url>https://wiki.openmrs.org/x/FQ4z</url>

	<scm>
		<connection>scm:git:https://github.com/IntelliSOFT-Consulting/openmrs-module-ehospitalws.git</connection>
		<developerConnection>scm:git:https://github.com/IntelliSOFT-Consulting/openmrs-module-ehospitalws.git</developerConnection>
		<url>https://github.com/IntelliSOFT-Consulting/openmrs-module-ehospitalws/</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>repsys-releases</id>
			<name>Repsys Maven Releases</name>
			<url>${repsysReleasesUrl}</url>
		</repository>
		<snapshotRepository>
			<id>repsys-snapshots</id>
			<name>Repsys Maven Snapshots</name>
			<url>${repsysSnapshotsUrl}</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>legacyui-omod</artifactId>
				<version>${legacyUIomodVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api</artifactId>
				<version>${serializationxstreamVersion}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api-2.0</artifactId>
				<version>${serializationxstreamVersion}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>webservices.rest-omod</artifactId>
				<version>${webservices.restModuleVersion}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>webservices.rest-omod-common</artifactId>
				<version>${webservices.restModuleVersion}</version>
				<scope>provided</scope>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-oxm</artifactId>
				<version>3.2.4.RELEASE</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openmrsPlatformVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>8.0.28</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<properties>
        <openmrsPlatformVersion>2.5.0</openmrsPlatformVersion>
		<legacyUIomodVersion>1.8.2</legacyUIomodVersion>
		<webservices.restModuleVersion>3.2.0</webservices.restModuleVersion>
		<serializationxstreamVersion>0.2.14</serializationxstreamVersion>
		<mockito.version>4.5.1</mockito.version>
		<powermock.version>2.0.9</powermock.version>
		<repsysReleasesUrl>https://packages.intellisoft.co.ke/repository/maven-releases/</repsysReleasesUrl>
		<repsysSnapshotsUrl>https://packages.intellisoft.co.ke/repository/maven-snapshots/</repsysSnapshotsUrl>
    </properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<goals>deploy</goals>
					<arguments>-DskipTests</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.7.1</version>
				<configuration>
					<directories>
						<directory>.</directory>
					</directories>
					<configFile>../OpenMRSFormatter.xml</configFile>
					<includes>
						<include>**/*.java</include>
						<include>**/*.js</include>
						<include>**/*.json</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
